--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"scripts": {
-		"watch": "parcel watch styles/styles.css --out-dir static/styles --no-hmr --no-source-maps",
-		"tail": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css --watch",
-		"tailbuild": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css"
+		"watch": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css --watch",
+		"build-tailwind": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css --minify"
 	},
 	"dependencies": {
 		"parcel": "^2.10.3",
