--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"scripts": {
 		"watch": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css --watch",
-		"build-tailwind": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css --minify"
+		"build-tailwind": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css",
+		"build-mini-tailwind": "pnpx tailwindcss -i ./styles/style.css -o ./static/style.css --minify"
 	},
 	"dependencies": {
 		"parcel": "^2.10.3",
